<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/desert_sand">


            <!-- movie title -->
            <TextView
                android:textColor="@color/black"
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp" />

            <!-- image slider -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/movieImageSlider"
                android:layout_width="371dp"
                android:layout_height="408dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/movieDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layoutDirection="ltr" />

            <!-- select Theatre -->
            <Spinner
                android:id="@+id/theatreSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>


            <!-- select Date (Dialog) -->
            <Button
                android:textColor="@color/golden_highlight"
                android:backgroundTint="@color/charcoal"
                android:id="@+id/selectDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:layout_marginBottom="16dp"/>

            <!-- number of tickets -->
            <EditText
                android:textColor="@color/light_gray"
                android:id="@+id/numberOfTickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/tickets_hint"
                android:inputType="number" />

            <!-- child or adult -->
            <RadioGroup
                android:id="@+id/ageGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:textColor="@color/light_gray"
                    android:id="@+id/adultRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_adult"/>

                <RadioButton
                    android:textColor="@color/light_gray"
                    android:id="@+id/childRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_child"/>
            </RadioGroup>

            <!-- get tickets button -->
            <Button
                android:backgroundTint="@color/golden_highlight"
                android:id="@+id/getTicketsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_tickets"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
